fixed the stuff within the mobile view to where it works and the image isnt overlapping each other

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
 /* Styles for the movie container */
 .movie {
-  height: auto;
+  height: 100%;
+  min-height: 400px;
 }
 
 /* Styles for the movie poster */
 .movie-poster {
   width: 100%;
-  height: 200px; /* Adjust the height as needed */
+  height: 100%;
+  min-height: 200px; /* Adjust the height as needed */
 }
 
 /* Styles for the movie title */
